<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Weather App</string>

    <!-- Languages Preferences -->
    <string name="english_language_preference_value">en</string>
    <string name="arabic_language_preference_value">ar</string>
    <!-- Themes Preferences -->
    <string name="dark_theme_preference_value">Dark</string>
    <string name="light_theme_preference_value">Light</string>
    <string name="system_theme_preference_value">Follow System</string>

    <string name="home">Home</string>
    <string name="favorits">Favorits</string>
    <string name="alerts">Alerts</string>
    <string name="settings">Settings</string>
    <string name="country">Giza, Government</string>
    <string name="date">Sun, 6 March</string>
    <string name="description">Clearly Sky</string>
    <string name="tempretur">0.0</string>
    <string name="unit">°</string>
    <string name="type">C</string>
    <string name="humidity">Humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds</string>
    <string name="hourly_forecast">Hourly Forecast</string>
    <string name="next_7_days"><![CDATA[Next 7 Days >]]></string>
    <string name="time">02:00</string>
    <string name="today">Today</string>
    <!-- Preference Titles -->

    <string name="theme_prefrence_key" translatable="false">theme_prefrence_key</string>
    <string name="system_theme_description">System default</string>
    <string name="dark_theme_description">Dark</string>
    <string name="light_theme_description">Light</string>
    <string name="title_of_alert">description</string>
    <string name="dd_mm_yy" translatable="false">dd_mm_yy</string>
    <string name="to">to</string>
    <string name="from">From</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="events">Events</string>
    <string name="soundtype">soundType</string>
    <string name="add_alert">add Alert</string>
    <string name="_7_march" translatable="false">7 March</string>
    <string name="_3_00_pm" translatable="false">3:00 PM</string>
    <string name="_2_00_am" translatable="false">2:00 Am</string>
    <string name="rain_alert" translatable="false">Rain Alert</string>
    <string name="cairo" translatable="false">Cairo</string>
    <string name="noting_to_show">Noting to show</string>
    <string name="click_to_add_place">Click to add Place</string>
    <string name="add">add</string>
    <string name="gps_description">Allow the app to get your location</string>
    <string name="gps">GPS</string>
    <string name="weather_Location">Weather Location</string>
    <string name="map_description">Choose your location from Map</string>
    <string name="map">Map</string>
    <string name="units">Units</string>
    <string name="unit_system">Unit System</string>
    <string name="language">Language</string>
    <string name="app_language">App Language</string>
    <string name="notification">Notification</string>
    <string name="notificaion_description">show current weather as Notification</string>
    <string name="theme">Theme</string>
    <string name="app_theme">App Theme</string>
    <string name="no_alerts">No Alerts</string>
    <string name="no_internet" translatable="false">No Internet</string>

</resources>